Patch pulumi-kubernetes schema
- temporary patch for schema until upstream PR is merged

Fixes #381

--- a/providers/pulumi-kubernetes/pulumi-java-gen.yaml
+++ b/providers/pulumi-kubernetes/pulumi-java-gen.yaml
@@ -3,6 +3,8 @@ out: sdk/java
 overlays:
 - ../build-templates
 pluginFile: src/main/resources/com/pulumi/kubernetes/plugin.json
-schema: https://raw.githubusercontent.com/pulumi/pulumi-kubernetes/v3.19.1/provider/cmd/pulumi-resource-kubernetes/schema.json
-version: 3.19.1
+# TODO: revert when provider changes are merged
+#schema: https://raw.githubusercontent.com/pulumi/pulumi-kubernetes/v3.19.4/provider/cmd/pulumi-resource-kubernetes/schema.json
+schema: ./providers/pulumi-kubernetes/schema.json
+version: 3.19.4
 versionFile: src/main/resources/com/pulumi/kubernetes/version.txt
